Added Store model, endpoints and swagger to the API.
